# kernel-node

./: Cargo.toml  build.rs  flake.nix
.github/workflows/: ci.yml
capnp/: chain.capnp  server.capnp  wallet.capnp
crates/wallet/: Cargo.toml
crates/wallet/src/silentpayments/: keys_file.rs  mod.rs  sending.rs
doc/: wallet.md
src/: ipc.rs  lib.rs
tests/: core_connection.rs  core_reorg.rs  core_sync.rs  node_liveness.rs
tests/common/: mod.rs
