[workspace]
members = [".", "crates/wallet"]
resolver = "2"

[package]
name = "kernel-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
# bitcoinkernel = { path = "../rust-bitcoinkernel", version = "0.0.15" }
bitcoinkernel = "0.2"
addrman = { package = "bitcoin-address-book", version = "0.1.1" }
bitcoin = { version = "0.32.8", features = ["rand-std"] }
p2p = { package = "bitcoin-p2p", git =  "https://github.com/2140-dev/bitcoin-p2p.git", rev = "5dc03375636a10487c7e50659416876c28f58a3b" }
## Log and configuration
configure_me = "0.4.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
wallet = { path = "crates/wallet" }
## IPC required dependencies
capnp = "0.25"
capnp-rpc = "0.25"
tokio = { version = "1", features = ["net", "rt", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3.0"
libc = "0.2"

[build-dependencies]
capnpc = "0.25"
configure_me_codegen = "0.4.0"

[dev-dependencies]
tempfile = "3"
corepc-node = { version = "0.12.0", default-features = false, features = ["30_2", "download"] }

[package.metadata.configure_me]
spec = "config_spec.toml"

[[bin]]
name = "node"

[[bin]]
name = "cli"
