[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
silentpayments = { version = "0.5", features = ["receiving", "encode", "sending"] }
bitcoin = { version = "0.32.8", features = ["rand-std"] }
bitcoinkernel = "0.2"
log = "0.4"
bitcoin-coin-selection = { path = "/home/yancy/Git/rust-bitcoin-coin-selection", features = ["rand"] }

[dev-dependencies]
tempfile = "3"
