[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
silentpayments = { version = "0.5", features = ["receiving", "encode", "sending"] }
bitcoin = { version = "0.32.8", features = ["rand-std"] }
bitcoinkernel = "0.2"
log = "0.4"
bdk_coin_select = "0.4.1"
clap = { version = "4", features = ["derive"]  }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "cli"
